--- a/static/css/report.css
+++ b/static/css/report.css
@@ -336,17 +336,17 @@ h3 {
         gap: 2rem;
     }
     .label-container {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 2rem;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
     }
 }
 
 @media (min-width: 1200px) {
     .label-container {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 2rem;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
     }
 }
 
