feat: 新增独立的 title.js 实现简单标题样式优化

--- a/static/templates/report_template.html
+++ b/static/templates/report_template.html
@@ -13,6 +13,6 @@
 <h1 class="overlap">每日分析报告</h1>
 <div class="report-time">更新时间：<span>$generate_time</span></div>
 $content
-<script src="./index.js"></script>
+<script src="./title.js"></script>
 </body>
 </html>
